@@ -1,5 +1,11 @@
 2004-03-04  Dave Malcolm  <david@davemalcolm.demon.co.uk>
 
+	* cong-editor-line-manager-simple.c, cong-editor-node-element-span.c, cong-object.h
+
+	Fixed warnings; this branch now compiles with -Wall -Werror
+
+2004-03-04  Dave Malcolm  <david@davemalcolm.demon.co.uk>
+
 	* cong-app.c, cong-attribute-editor-cdata.c, cong-attribute-editor-cdata.h, cong-attribute-editor-enumeration.c, cong-attribute-editor-enumeration.h, cong-attribute-editor.c, cong-attribute-editor.h, cong-attribute-wrapper-check-button.c, cong-attribute-wrapper-check-button.h, cong-attribute-wrapper-radio-button.c, cong-attribute-wrapper-radio-button.h, cong-attribute-wrapper.c, cong-attribute-wrapper.h, cong-command.c, cong-command.h, cong-debug-log-view.c, cong-dispspec-element-gxx.h, cong-dispspec-element.c, cong-dispspec-element.h, cong-dispspec-registry.c, cong-dispspec.c, cong-dispspec.h, cong-document-traversal.c, cong-document.c, cong-document.h, cong-dom-view.c, cong-dtd.c, cong-dtd.h, cong-edit-find-and-replace.c, cong-editor-area-composer.c, cong-editor-area-container.c, cong-editor-area-expander.c, cong-editor-area-flow-holder-blocks.c, cong-editor-area-flow-holder-single.c, cong-editor-area-flow-holder.c, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-area-text-comment.c, cong-editor-area-text.c, cong-editor-area-underline.c, cong-editor-area.c, cong-editor-line-manager-simple.c, cong-editor-line-manager.c, cong-editor-line-manager.c, cong-editor-node-comment.c, cong-editor-node-element-span.c, cong-editor-node-text.c, cong-editor-node.c, cong-editor-widget3.c, cong-eel.c, cong-fake-plugin-hooks.h, cong-file-export.c, cong-file-import.c, cong-file-new.c, cong-file-print.c, cong-file-save.c, cong-font.c, cong-location.c, cong-marshal.c, cong-marshal.h, cong-menus.c, cong-modification-set-dtd-ptr.c, cong-node-modification-remove-attribute.c, cong-node-modification-remove-attribute.h, cong-node-modification-set-attribute.c, cong-node-modification-set-attribute.h, cong-node-properties-dialog.c, cong-node.c, cong-node.h, cong-object.h, cong-overview-view.c, cong-parser-error.c, cong-plugin-manager.c, cong-plugin-manager.h, cong-plugin.c, cong-plugin.h, cong-primary-window.c, cong-service-doc-tool.h, cong-service-node-tool.c, cong-service-node-tool.h, cong-source-view.c, cong-tree-view.c, cong-util.c, cong-util.h, cong-view.h, cong-xpath-expression.c, cursor.c, fo-parser-result.c, fo-solver-result.c, fo-tests.c, global.h, gxx-impl-object-to-xml-tree.c, ilogo.c, main.c, plugin-cleanup-source.c, plugin-convert-case.c, plugin-docbook.c, plugin-dtd.c, plugin-empty.c, plugin-fo.c, plugin-lists-node-element-listitem.c, plugin-paragraph-area-paragraph.c, plugin-print-source.c, plugin-random.c, plugin-save-dispspec.c, plugin-sgml.c, plugin-templates.c, plugin-validate.c, plugin-website.c, popup.c, select.c, tree.c, xmldata.c, xmledit.c
 
 	Merged all the changes from HEAD into the WidgetPlayground branch (random doc plugin, DTD improvements, warning fixes, big rewrite of plugin system to use GObject, improvements to namespace support by me and by Johannes Hoelzl, implemented node tools, new logo, various other fixes)
